		- SignOn Screen (rewritten by Rob Flynn)
		- Conversation Window (needs tooltips)
		- Chat Window (sort of: needs menu bar, tooltips)
		- GtkIMHtml (Ari Pollak, Christian Hammond)
		- Buddy Icons
		- IM Images
		- Alert Dialogs
		- GtkIMHtml tooltips Pangonated
		- About Dialog (Nathan Walp)
		- i18n capable text input widget (Thanks Ethan Blanton, 
		  David Odin, etc)
	* Read proxy environment variables. (Thanks, Christian Hammond)
	* Fixed security vulnerability with manual browser option (Thanks,
	  Robert McQueen)
	* Can get info for ICQ and Jabber users from the "Edit
	  Buddies" tab (Thanks, Brian Bernas)
	* Code cleanups and fixes (Thanks, Federico Mena Quintero and 
	  Ka-Hing Cheung)
	* Word-wrapping on mail notification text (Thanks, Andrew Molloy)
	* Generic File Transfer PRPL interface (Thanks, William T. Mahan)
	* Better supression of auto-responses (Thanks, Joshua Blanton)

version 0.59 (06/24/2002):
	* Hungarian translation added (Thanks, Sutto Zoltan)
	* Swedish translation updated (Thanks, Christian Rose)
	* Spanish translation updated (Thanks, Alex)
	* Traditional Chinese translation updated (Thanks, Paladin Liu)
	* Czech translation added (Thanks, Honza)
	* Polish translation updated (Thanks Przemyslaw Sulek)
	* Squashed a bug in buddy right-click menu handling
	  that crashed Gaim.  In the process: found and
	  eliminated some memory leaks.
	* Fixed a significant applet leak
	* Can now change Jabber password on server (Thanks,
	  Nathan Walp)
	* Certain types of Jabber presence errors no longer
	  falsely show a buddy on-line.  Instead now a "broken
	  light-bulb" icon is shown and the error status is
	  available via "Get Away Msg"  (Thanks and a tip o'
	  the hat to Christian Hammond for the graphic)
	* Conversation struct has pointer to toolbar (thanks Brent
	  Priddy and Paul Miller)
	* Zephyr fixes (thanks, Arun A. Tharuvai)
	* Aliases in buddy ticker
	* Perl scripts can play Gaim sounds (thanks Andrew Rodland)